--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+@media (prefepxrs-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
@@ -32,7 +32,56 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
+/* ///////////////////////////////////////////////////////////////// */
+
+.articles-container {
+  max-width: 900px;
+  margin: auto;
+}
+
+.articles-header {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid red;
+
+}
+
+/* //////// :: News data start */
+
+.article-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 2px solid blue;
+  padding: 5px;
+}
+
+.article-title {
+  border: 2px solid blue;
+  width: 300px;
+}
+
+.article-classification {
+  width: 250px;
+  border: 2px solid blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.article-authpercent {
+  width: 250px;
+  border: 2px solid blue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* //////// :: News data end */
