--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefepxrs-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -43,45 +34,73 @@
 .articles-container {
   max-width: 900px;
   margin: auto;
+  border: 1px solid rgb(218, 218, 218);
+  padding: 5px;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .articles-header {
   display: flex;
   justify-content: space-between;
-  border: 2px solid red;
-
+  padding: 0 120px;
 }
-
+.title {
+  font-size: 18px;
+  font-weight: 600;
+}
 /* //////// :: News data start */
 
+.inner-title {
+  font-size: 28px;
+  margin: 40px auto;
+  width: 940px;
+  display: flex;
+  justify-content: space-between;
+}
+.load-more {
+  margin-left: 20px;
+  padding: 20px;
+}
 .article-container {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
   border-radius: 10px;
-  border: 2px solid blue;
+  border: 1px solid rgb(196, 218, 252);
   padding: 5px;
 }
 
 .article-title {
-  border: 2px solid blue;
   width: 300px;
 }
 
 .article-classification {
   width: 250px;
-  border: 2px solid blue;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: azure;
+  border-radius: 10px;
 }
 
 .article-authpercent {
   width: 250px;
-  border: 2px solid blue;
+  background-color: azure;
+  border-radius: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+button {
+  background-color: #61dafb;
+  border: none;
+  padding: 2px 10px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 400;
+  cursor: pointer;
 }
 
 /* //////// :: News data end */
