--- a/src/App.css
+++ b/src/App.css
@@ -104,3 +104,20 @@ button {
 }
 
 /* //////// :: News data end */
+
+.searchContainer {
+  display: flex;
+  width: 940px;
+  margin: auto;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+.searchContainer select {
+  padding: 10px;
+  width: 500px;
+  border-radius: 10px;
+}
+.searchContainer button {
+  padding: 20px 30px;
+  margin-left: 20px;
+}
